# itm_2025_soa_u3

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  package-lock.json  pyproject.toml
.github/workflows/: mkdocs.yml  pruebas.yaml
app/: cli.py  config.py  db.py  log_utils.py  main.py  run.py
app/proyectos/asantelis/: models.py  routes.py  schemas.py
app/proyectos/dduenas/: models.py  routes.py  schemas.py
app/proyectos/dramos/: models.py  routes.py  schemas.py
app/proyectos/fcalzada/: models.py  routes.py  schemas.py
app/proyectos/imayo/: __init__.py  models.py  routes.py  (+1 more)
docs/: index.md
docs/herramientas/: fastapi.md  mkdocs.md  pytest.md  webservice.md
docs/proyectos/: fcalzada.md  imayo.md  index.md  jheredia.md  rpalma.md
docs/servicios/: asantelis.md  dduenas.md  dramos.md  nnieto.md
docs/tutorial/: git.md  implementacion.md  index.md  mkdocs.md  pr.md  pytest.md  repositorio.md  ruff.md  uv.md  winget.md
example/: pyproject.toml
frontend/: alcancia.py  utils.py
frontend/dduenas/: package-lock.json  package.json
frontend/dramos/: package-lock.json  package.json
frontend/fcalzada/: index.html  package-lock.json  package.json
frontend/imayo/: package-lock.json  package.json
frontend/imoreno/: deleteClient.go  go.mod  main.go  registerForm.go  searchForm.go  updateClient.go
frontend/jchaidez/: cursos.html  scripts.js  styles.css
frontend/jcontreras/: scripts.js  ventas.html
frontend/jheredia/: index.html  package-lock.json  package.json
frontend/jparedes/: package-lock.json  package.json
frontend/ksoto/: package-lock.json  package.json
frontend/nnieto/: alcancia.py  utils.py
frontend/rgarcia/: api_consumer.py  app.py
frontend/rpalma/: contactos.html  contactos_old.html  scripts.js  styles.css
herramientas/fastapi/: index.html
herramientas/mkdocs/: index.html
herramientas/pytest/: index.html
proyectos/: index.html
proyectos/asantelis/: index.html
proyectos/dduenas/: index.html
proyectos/dramos/: index.html
proyectos/fcalzada/: index.html
proyectos/imayo/: index.html
proyectos/imoreno/: index.html
proyectos/jchaidez/: index.html
proyectos/jcontreras/: index.html
proyectos/jheredia/: index.html
proyectos/jparedes/: index.html
proyectos/ksoto/: index.html
proyectos/nnieto/: index.html
proyectos/rgarcia/: index.html
proyectos/rpalma/: index.html
stylesheets/: extra.css
tests/: conftest.py  test_asantelis.py  test_asantelis_extended.py  test_dduenas.py  test_dramos.py  test_imayo.py  test_imoreno.py  test_jchaidez.py  test_jcontreras.py  test_jheredia.py  test_jparedes.py  test_ksoto.py  test_nnieto.py  test_rgarcia.py  test_rpalma.py
tests/test_fcalzada/: conftest.py  test_fcalzada.py
tutorial/: index.html
tutorial/git/: index.html
tutorial/implementacion/: index.html
tutorial/mkdocs/: index.html
tutorial/pr/: index.html
tutorial/pytest/: index.html
tutorial/repositorio/: index.html
tutorial/ruff/: index.html
tutorial/uv/: index.html
tutorial/winget/: index.html
(+141 files in other folders)
