[project]
name = "itm-2005-soa-u3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "colorlog>=6.9.0",
    "fastapi[standard]>=0.115.11",
    "pydantic-settings>=2.8.1",
    "pytest-coverage>=0.0",
    "sqlmodel>=0.0.24",
    "typer>=0.15.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
python_files = [
    "test_*.py"
]
addopts = [
    "--junitxml=pytest.xml",
    "--tb=short",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-report=json",
]
log_cli = true
log_cli_level = "INFO"

